--- a/locales/da/filters.json
+++ b/locales/da/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprouts Nordic Filters",
 		"filter.249.description": "Denne liste dækker websteder for Danmark, Norge, Island, Færøerne, Grønland og den indfødte samiske befolkning."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Denne liste er udarbejdet i stil med AdGuards og Fanboys irritationslister. Den kombinerer mhp. enkelhed mange af Dandelion Sprout' bedste og hyppigst vedligeholdte internationale lister som en kurateret samling."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Fjerner automatisk unødvendige '$'- og '&'-værdier fra URL'er, hvilket gør dem nemmere at kopiere fra adressebjælken og indsætte som links andre steder."
 	}
 ]
