--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -1,14 +1,14 @@
 [
 	{
 		"filter.1.name": "AdGuardin venäjänkielen suodatin",
-		"filter.1.description": "Suodatin, joka tehostaa mainosten estoa erityisesti venäjänkielisillä sivustoilla."
+		"filter.1.description": "Suodatin, joka tehostaa mainosestoa erityisesti venäjänkielisillä sivustoilla."
 	},
 	{
 		"filter.2.name": "AdGuardin vakiosuodatin",
-		"filter.2.description": "EasyList + AdGuardin vakiosuodatin. Tarpeellinen suodatin laadukasta mainosten estoa varten."
+		"filter.2.description": "EasyList + AdGuardin vakiosuodatin. Tarpeellinen suodatin laadukasta mainosestoa varten."
 	},
 	{
-		"filter.3.name": "AdGuardin seurannan eston suodatin",
+		"filter.3.name": "AdGuardin seurannanestosuodatin",
 		"filter.3.description": "Kattavin lista erilaisista verkkolaskureista ja analyysityökaluista. Jos et halua, että toimiasi Internetissä seurataan, käytä tätä suodatinta."
 	},
 	{
@@ -25,7 +25,7 @@
 	},
 	{
 		"filter.7.name": "AdGuardin japaninkielen suodatin",
-		"filter.7.description": "Suodatin, joka tehostaa mainosten estoa erityisesti japaninkielisillä sivustoilla."
+		"filter.7.description": "Suodatin, joka tehostaa mainosestoa erityisesti japaninkielisillä sivustoilla."
 	},
 	{
 		"filter.8.name": "AdGuardin hollanninkielen suodatin",
@@ -36,8 +36,8 @@
 		"filter.9.description": "Suodatin, joka tehostaa mainosten estoa erityisesti portugalin- ja espanjankielisillä sivustoilla."
 	},
 	{
-		"filter.10.name": "Hakumainontaa ja sivustojen omaa markkinointia salliva suodatin",
-		"filter.10.description": "Suodatin, joka sallii hyödyllisemmän hakumainonnan (DuckDuckGo, Google, Bing, Yahoo) ja sivustojen oman markkinoinnin. Oman markkinoinnin määritelmä: Kun mainos kohdistuu juuri tähän sivustoon tai sivustoihin/sosiaaliseen mediaan/tm. läheisesti siihen liittyvään, pidetään mainosta omana markkinointina."
+		"filter.10.name": "Hakumainonnan ja sivustojen oman markkinoinnin salliva suodatin",
+		"filter.10.description": "Suodatin, joka sallii hyödyllistä hakumainontaa (DuckDuckGo, Google, Bing, Yahoo) ja sivustojen omaa markkinointia. Oman markkinoinnin määritelmä: Kun mainos kohdistuu juuri tähän sivustoon tai sivustoihin/sosiaaliseen mediaan/tm. läheisesti siihen liittyvään, pidetään mainosta omana markkinointina."
 	},
 	{
 		"filter.11.name": "AdGuardin mobiilimainosten suodatin",
@@ -45,7 +45,7 @@
 	},
 	{
 		"filter.12.name": "AdGuardin Safari-suodatin",
-		"filter.12.description": "Erityinen suodatin Safari 9+:lle iOS ja macOS -laitteissa. Safari tarvitsee erillisen suodattimen, koska se ei ole täysin yhteensopiva sääntörakenteemme kanssa."
+		"filter.12.description": "Erityinen suodatin Safari 9+:lle iOS ja macOS -laitteissa. Safari tarvitsee erillisen suodattimen, koska se ei ole täysin yhteensopiva sääntöjemme syntaksin kanssa."
 	},
 	{
 		"filter.13.name": "AdGuardin turkinkielen suodatin",
@@ -57,14 +57,14 @@
 	},
 	{
 		"filter.15.name": "AdGuardin DNS-suodatin",
-		"filter.15.description": "Suodatin koostuu useista erillisistä suodattimista (AdGuard vakiosuodatin, sosiaalisen median suodatin, seurannan eston suodatin, mobiilimainosten suodatin, EasyList ja EasyPrivacy) ja se on erityisesti tiivistetty DNS-tason mainosten estoon sopivammaksi."
+		"filter.15.description": "Suodatin koostuu useista erillisistä suodattimista (AdGuardin vakiosuodatin, sosiaalisen median suodatin, seurannanestosuodatin, mobiilimainosten suodatin, EasyList ja EasyPrivacy) ja se on erityisesti tiivistetty DNS-tason mainosestoon sopivammaksi."
 	},
 	{
 		"filter.16.name": "AdGuardin ranskankielen suodatin",
 		"filter.16.description": "Liste FR + AdGuardin ranskankielinen suodatin. Poistaa mainoksia erityisesti raskankielisillä sivustoilla."
 	},
 	{
-		"filter.17.name": "AdGuardin URL-seurannan eston suodatin",
+		"filter.17.name": "AdGuardin URL-seurannanestosuodatin",
 		"filter.17.description": "Suodatin, joka parantaa yksityisyyttä poistamalla seurantaparametrit URL-osoitteista."
 	},
 	{
@@ -169,15 +169,15 @@
 	},
 	{
 		"filter.204.name": "Peter Lowe's Blocklist",
-		"filter.204.description": "Suodatin, joka estää mainoksia, seurantajärjestelmiä ja muita ikäviä asioita."
+		"filter.204.description": "Suodatin, joka estää mainoksia, seurantoja ja muita ikäviä asioita."
 	},
 	{
 		"filter.206.name": "Xfiles",
-		"filter.206.description": "Italiankielen suodatinlista."
+		"filter.206.description": "Suodatin mainosestoon italiankielisillä sivustoilla."
 	},
 	{
 		"filter.207.name": "Adblock Warning Removal List",
-		"filter.207.description": "Poistaa mainosten eston käyttöilmoituksia ja muita häiritseviä viestejä."
+		"filter.207.description": "Poistaa mainoseston käyttöilmoituksia ja muita häiritseviä viestejä."
 	},
 	{
 		"filter.208.name": "Online Malicious URL Blocklist",
@@ -189,7 +189,7 @@
 	},
 	{
 		"filter.212.name": "RU AdList: Counters",
-		"filter.212.description": "RU AdList laajennus seurantajärjestelmien suojaukseen."
+		"filter.212.description": "RU AdList laajennus seurannanestoon."
 	},
 	{
 		"filter.213.name": "RU AdList: BitBlock",
@@ -197,7 +197,7 @@
 	},
 	{
 		"filter.214.name": "ABPVN List",
-		"filter.214.description": "Vietnaminkielen suodatinlista."
+		"filter.214.description": "Suodatin mainosestoon vietnaminkielisillä sivustoilla."
 	},
 	{
 		"filter.215.name": "Fanboy's Enhanced Tracking List",
@@ -213,11 +213,11 @@
 	},
 	{
 		"filter.218.name": "Estonian List",
-		"filter.218.description": "Suodatin mainosten estoon vironkielisillä sivustoilla."
+		"filter.218.description": "Suodatin mainosestoon vironkielisillä sivustoilla."
 	},
 	{
 		"filter.219.name": "ChinaList + EasyList",
-		"filter.219.description": "Kiinankielen mainosten estolista. Huomioi, ettei tämä sisällä EasyListiä."
+		"filter.219.description": "Kiinankielisten mainosten estolista. Huomioi, ettei tämä sisällä EasyListiä."
 	},
 	{
 		"filter.220.name": "CJX's Annoyances List",
@@ -229,7 +229,7 @@
 	},
 	{
 		"filter.222.name": "Adblock-Persian list",
-		"filter.222.description": "Suodatin mainosten estoon farsinkielisillä sivustoilla."
+		"filter.222.description": "Suodatin mainosestoon farsinkielisillä sivustoilla."
 	},
 	{
 		"filter.223.name": "Fanboy's Swedish",
@@ -249,7 +249,7 @@
 	},
 	{
 		"filter.228.name": "xinggsf",
-		"filter.228.description": "Estää mainoksia Kiinalaisissa videopalveluissa (MangoTV, DouYu ja muita)."
+		"filter.228.description": "Estää mainoksia Kiinalaisissa videopalveluissa (MangoTV, DouYu, ym.)."
 	},
 	{
 		"filter.229.name": "I don't care about cookies",
@@ -269,7 +269,7 @@
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
-		"filter.233.description": "Suodatin mainosten estoon suomenkielisillä sivustoilla."
+		"filter.233.description": "Suodatin mainosestoon suomenkielisillä sivustoilla."
 	},
 	{
 		"filter.234.name": "ROLIST2",
@@ -277,15 +277,15 @@
 	},
 	{
 		"filter.235.name": "Iranian filter",
-		"filter.235.description": "Mainosten estosäännöt iranin/farsinkielisille sivustoille."
+		"filter.235.description": "Mainosestosäännöt iranin/farsinkielisille sivustoille."
 	},
 	{
 		"filter.236.name": "road-block",
-		"filter.236.description": "Romainiankielen mainosten estosuodattimen tilaus."
+		"filter.236.description": "Suodatin mainosestoon romaniankielisillä sivustoilla."
 	},
 	{
 		"filter.237.name": "Polish Annoyances Filters",
-		"filter.237.description": "Suodatinlista, joka piilottaa ja estää ponnahduksia, vimpaimia, uutiskirjeitä, push-ilmoituksia, nuolia, merkittyjä sisäisiä linkkejä aiheen ulkopuolelta sekä muita ärsyttäviä elementtejä. Puolan GDPR-evästesuodatitimet sisältyvät jo siihen."
+		"filter.237.description": "Suodatinlista, joka piilottaa ja estää ponnahduksia, vimpaimia, uutiskirjeitä, push-ilmoituksia, nuolia, merkittyjä sisäisiä linkkejä aiheen ulkopuolelta sekä muita ärsyttäviä elementtejä. Puolan GDPR-evästesuodattimet sisältyvät jo siihen."
 	},
 	{
 		"filter.238.name": "Polish Anti Adblock Filters",
@@ -297,7 +297,7 @@
 	},
 	{
 		"filter.240.name": "BarbBlock",
-		"filter.240.description": "BarbBlock on sisällön estolista, jolla on omat selainlaajennukset Chromelle ja Firefoxille. Se estää sivustot, jotka ovat käyttäneet DMCA:n poistopyyntöjä muilta sisällön estolistoilta. Tällaiset poistopyynnöt ovat täysin virheellisiä, mutta saattavat olla tehokkas uhka, jolla pienemmät avoimen lähdekoodin projektit saadaan niitä noudattamaan."
+		"filter.240.description": "BarbBlock on sisällönestolista, jolla on omat selainlaajennukset Chromelle ja Firefoxille. Se estää sivustot, jotka ovat käyttäneet DMCA:n poistopyyntöjä muilta sisällönestolistoilta. Tällaiset poistopyynnöt ovat täysin virheellisiä, mutta saattavat olla tehokkas uhka, jolla pienemmät avoimen lähdekoodin projektit saadaan niitä noudattamaan."
 	},
 	{
 		"filter.241.name": "EasyList Cookie List",
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Tämä lista kattaa norjan-, tanskan-, islanninkieliset alueet, sekä saamenkielisen alkuperäisväestön."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "AdGuardin ja Fanboyn mielipahojen suodatinlistojen tyylinen lista, joka yhdistää monia Dandelion Sproutin merkittävimpiä ja käytetyimpiä kansainvälisiä listoja valikoiduksi kokoelmaksi yksinkertaisuuden vuoksi."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Poistaa URL-osoitteiden tarpeettomat '$' ja '&' -arvot automaattisesti, mikä helpottaa kopiointia selaimen osoitepalkista ja liittämistä muualle linkkeinä."
 	}
 ]
