--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -236,7 +236,7 @@
 		"filter.223.description": "רשימת מסננים עבור אתרים בשוודית."
 	},
 	{
-		"filter.225.name": "רשימת נגד־פייסבוק של Fanboy’s",
+		"filter.225.name": "Fanboy's Anti-Facebook List",
 		"filter.225.description": "אזהרה: המסנן ישבור הערות מבוססות פייסבוק באתרים ועשוי גם לשבור מספר יישומים או משחקים של פייסבוק."
 	},
 	{
@@ -320,15 +320,15 @@
 		"filter.245.description": "מסנן שמסיר אלמנטים מטרידים מאתרים מסחר פולניים."
 	},
 	{
-		"filter.246.name": "EasyList פולנית",
+		"filter.246.name": "EasyList Polish",
 		"filter.246.description": "תוספת פולנית עבור EasyList."
 	},
 	{
-		"filter.247.name": "Polski Antyirytujący Dodatek Specjalny",
+		"filter.247.name": "Polish Anti-Annoying Special Supplement",
 		"filter.247.description": "מסננים שחוסמים ומסתירים אלמנטי אר־אס־אס ושאריות של עלונים מוסתרים שמשולבים עם אלמנטים חברתיים באתרים פולניים."
 	},
 	{
-		"filter.249.name": "מסננים נורדיים של Dandelion Sprout",
+		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "רשימה זו מכסה אתרים עבור נורווגיה, דנמרק, איסלנד, טריטוריות דניות, ואוכלוסיית הילידים הסאמים."
 	}
 ]
