--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Questa lista copre i siti web per Norvegia, Danimarca, Islanda, territori olandesi e popolazione indigena Sami."
+	},
+	{
+		"filter.250.name": "Lista Dandelion Sprout Annoyances",
+		"filter.250.description": "Questa lista è realizzata nel medesimo stile degli elenchi AdGuard Fanboy Annoyances. Combina molti degli elenchi internazionali più fieri e sottoposti a frequente manutenzione da parte di Dandelion Sprout, come raccolta curata e contraddistinta della semplicità."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Rimuove automaticamente i valori \"$\" e \"&\" non necessari dagli URL, rendendoli più facili da copiare dalla barra degli Indirizzi per incollarli altrove come collegamenti."
 	}
 ]
