--- a/locales/pt_BR/filters.json
+++ b/locales/pt_BR/filters.json
@@ -212,7 +212,7 @@
 		"filter.217.description": "Lista de filtros polonês para bloqueio de cookies."
 	},
 	{
-		"filter.218.name": "Lista Estoniano",
+		"filter.218.name": "Lista estoniana",
 		"filter.218.description": "Filtro para bloqueio de anúncios em sites em estoniano."
 	},
 	{
@@ -220,7 +220,7 @@
 		"filter.219.description": "Lista de bloqueio de anúncios para a China. Observe que, na verdade, ele não inclui EasyList."
 	},
 	{
-		"filter.220.name": "Lista de dificuldades da CJX",
+		"filter.220.name": "CJX's Annoyances List",
 		"filter.220.description": "Suplemento para EasyList China+EasyList e EasyPrivacy."
 	},
 	{
@@ -304,7 +304,7 @@
 		"filter.241.description": "Remove cookies e avisos de privacidade. Já incluído na Fanboy's Annoyances list."
 	},
 	{
-		"filter.242.name": "Lista de filtros NoCoin",
+		"filter.242.name": "NoCoin Filter List",
 		"filter.242.description": "Este filtro desativa mineradores baseados em navegador, como coin-hive."
 	},
 	{
@@ -328,7 +328,15 @@
 		"filter.247.description": "Filtros que bloqueiam e ocultam elementos RSS e resquícios de boletins informativos ocultos combinados com elementos sociais em sites poloneses."
 	},
 	{
-		"filter.249.name": "Filtros Nórdicos de Sprout de Dandelion",
+		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Esta lista cobre sites da Noruega, Dinamarca, Islândia, territórios dinamarqueses e da população indígena Sami."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Esta lista é feita no estilo das listas de aborrecimentos do AdGuard e do Fanboy. O filtro combina muitas das listas internacionais mais orgulhosas e mantidas com mais frequência da Dandelion Sprout, como uma compilação com curadoria de simplicidade."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Remove automaticamente os valores desnecessários '$' e '&' dos URLs, tornando-os mais fáceis de copiar da barra de URL e colar em outro lugar como links."
 	}
 ]
