--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Этот фильтр работает на территории Норвегии, Дании, Исландии и для коренного населения саами."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Этот фильтр сделан в стиле AdGuard's и Fanboy's annoyances list. Объединяет много фильтров Dandelion Sprout и часто обновляемых международных фильтров ради простоты использования."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Автоматически удаляет ненужные «$» и «&» из URL-адресов, чтобы их было проще копировать из адресной строки и вставлять куда-то как ссылки."
 	}
 ]
