--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Nordijski filtri Dandelion Sprouta",
 		"filter.249.description": "Ta seznam zajema spletne strani za Norveško, Dansko, Islandijo, danska ozemlja in domorodno prebivalstvo Sami."
+	},
+	{
+		"filter.250.name": "Seznam motenj Dandelion Sprouta",
+		"filter.250.description": "Ta seznam je narejen v slogu AdGuardovih in Fanboyjevih seznamov motenj. Združuje veliko najbolj ponosnih in najpogosteje vzdrževanih mednarodnih seznamov Dandelion Sprouta kot kurirska kompilacija zaradi preprostosti."
+	},
+	{
+		"filter.251.name": "Legitimno orodje za krajšanje URL-jev",
+		"filter.251.description": "Samodejno odstrani nepotrebne vrednosti '$' in '&' iz URL-jev, zaradi česar jih je lažje kopirati iz vrstice URL in prilepiti drugam kot povezave."
 	}
 ]
