--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Bu liste Norveç, Danimarka, İzlanda, Danimarka bölgeleri ve Sami yerli nüfusu için web sitelerini kapsar."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Bu liste AdGuard'ın ve Fanboy's Annoyances listeleri tarzında yapılmıştır. Dandelion Sprout'un en gururlu ve en sık tutulan uluslararası listelerinden birçoğunu basitlik adına derlenmiş bir derleme olarak birleştirir."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "URL'lerden gereksiz '$' ve '&' değerlerini otomatik olarak kaldırarak, bunların URL çubuğundan kopyalanmasını ve bağlantı olarak başka bir yere yapıştırılmasını kolaylaştırır."
 	}
 ]
