--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "这个列表涵盖了挪威、丹麦、冰岛、丹麦领土和萨米土著居民的网站。"
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances 的列表",
+		"filter.250.description": "这个列表是按照 AdGuard 和 Fanboy Annoyances 的列表的风格制作的。为简单起见，它合并了 Dandelion Sprout 的许多最引以为豪和最常维护的国际列表作为精选汇编。"
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "自动从 URL 中删除不必要的 '$' 和 '&' 值，使它们更容易从 URL 栏中复制并作为链接粘贴到其他地方。"
 	}
 ]
