--- a/locales/be/filters.json
+++ b/locales/be/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Гэты фільтр працуе на тэрыторыі Нарвегіі, Даніі, Ісландыі і для карэннага насельніцтва саамаў."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Гэты фільтр зроблены ў стылі AdGuard і Fanboy annoyances list. Яднае шмат фільтраў Dandelion Sprout і якія часта абнаўляюцца міжнародных фільтраў дзеля прастаты выкарыстання."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Аўтаматычна падаляе непатрэбныя «$» і «&» з URL-адрасоў, каб іх было прасцей капіяваць з адраснага радка і ўстаўляць кудысьці як спасылкі."
 	}
 ]
