--- a/locales/es_ES/filters.json
+++ b/locales/es_ES/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Esta lista abarca los sitios web de Noruega, Dinamarca, Islandia, los territorios daneses y la población indígena Sami."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Esta lista está hecha al estilo de las listas de elementos molestos de AdGuard y Fanboy. Combina muchas de las listas internacionales de las que Dandelion Sprout se enorgullece y mantiene con mayor frecuencia, como una compilación seleccionada por simplicidad."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Elimina automáticamente los valores '$' y '&' innecesarios de las URL, lo que facilita la copia de la barra de URL y el pegado en otros lugares como enlaces."
 	}
 ]
