--- a/locales/fi/tags.json
+++ b/locales/fi/tags.json
@@ -1,18 +1,18 @@
 [
 	{
-		"tag.64.description": "Suodatin, joka tehostaa mainosten estoa erityisesti thainkielisillä sivustoilla",
+		"tag.64.description": "Suodatin, joka tehostaa mainosestoa erityisesti thainkielisillä sivustoilla",
 		"tag.64.name": "Thainkielisten mainosten esto"
 	},
 	{
-		"tag.63.description": "Suodatin, joka tehostaa mainosten estoa erityisesti fäärinkielisillä sivustoilla",
+		"tag.63.description": "Suodatin, joka tehostaa mainosestoa erityisesti fäärinkielisillä sivustoilla",
 		"tag.63.name": "Fäärinkielisten mainosten esto"
 	},
 	{
-		"tag.30.description": "Suodatin, joka tehostaa mainosten estoa erityisesti bulgariankielisillä sivustoilla",
+		"tag.30.description": "Suodatin, joka tehostaa mainosestoa erityisesti bulgariankielisillä sivustoilla",
 		"tag.30.name": "Bulgariankielisten mainosten esto"
 	},
 	{
-		"tag.29.description": "Suodatin, joka tehostaa mainosten estoa erityisesti indonesiankielisillä sivustoilla",
+		"tag.29.description": "Suodatin, joka tehostaa mainosestoa erityisesti indonesiankielisillä sivustoilla",
 		"tag.29.name": "Indonesiankielisten mainosten esto"
 	},
 	{
@@ -32,7 +32,7 @@
 		"tag.6.name": "Cookie notices blocking"
 	},
 	{
-		"tag.7.description": "Suodatin, joka tehostaa mainosten estoa erityisesti englanninkielisillä sivustoilla",
+		"tag.7.description": "Suodatin, joka tehostaa mainosestoa erityisesti englanninkielisillä sivustoilla",
 		"tag.7.name": "Englanninkielisten mainosten esto"
 	},
 	{
@@ -40,7 +40,7 @@
 		"tag.2.name": "Yksityisyyden suojaus"
 	},
 	{
-		"tag.8.description": "Suodatin, joka tehostaa mainosten estoa erityisesti venäjänkielisillä sivustoilla",
+		"tag.8.description": "Suodatin, joka tehostaa mainosestoa erityisesti venäjänkielisillä sivustoilla",
 		"tag.8.name": "Venäjänkielisten mainosten esto"
 	},
 	{
@@ -64,7 +64,7 @@
 		"tag.11.name": "AdGuardin vakiosuodattimen viite"
 	},
 	{
-		"tag.12.description": "Suodatin, joka tehostaa mainosten estoa erityisesti saksankielisillä sivustoilla",
+		"tag.12.description": "Suodatin, joka tehostaa mainosestoa erityisesti saksankielisillä sivustoilla",
 		"tag.12.name": "Saksankielisten mainosten esto"
 	},
 	{
@@ -72,11 +72,11 @@
 		"tag.13.name": "EasyList Germany filter reference"
 	},
 	{
-		"tag.14.description": "Suodatin, joka tehostaa mainosten estoa erityisesti japaninkielisillä sivustoilla",
+		"tag.14.description": "Suodatin, joka tehostaa mainosestoa erityisesti japaninkielisillä sivustoilla",
 		"tag.14.name": "Japaninkielisten mainosten esto"
 	},
 	{
-		"tag.15.description": "Suodatin, joka tehostaa mainosten estoa erityisesti hollanninkielisillä sivustoilla",
+		"tag.15.description": "Suodatin, joka tehostaa mainosestoa erityisesti hollanninkielisillä sivustoilla",
 		"tag.15.name": "Hollanninkielisten mainosten esto"
 	},
 	{
@@ -84,15 +84,15 @@
 		"tag.16.name": "EasyList Dutch filter reference"
 	},
 	{
-		"tag.17.description": "Suodatin, joka tehostaa mainosten estoa erityisesti espanjankielisillä sivustoilla",
+		"tag.17.description": "Suodatin, joka tehostaa mainosestoa erityisesti espanjankielisillä sivustoilla",
 		"tag.17.name": "Espanjankielisten mainosten esto"
 	},
 	{
-		"tag.18.description": "Suodatin, joka tehostaa mainosten estoa erityisesti portugalinkielisillä sivustoilla",
+		"tag.18.description": "Suodatin, joka tehostaa mainosestoa erityisesti portugalinkielisillä sivustoilla",
 		"tag.18.name": "Portugalinkielisten mainosten esto"
 	},
 	{
-		"tag.19.description": "Suunniteltu estämään mainokset ja seurantajärjestelmät erityisesti mobiililaitteissa",
+		"tag.19.description": "Suunniteltu estämään mainokset ja seurannat erityisesti mobiililaitteissa",
 		"tag.19.name": "For mobile devices"
 	},
 	{
@@ -104,7 +104,7 @@
 		"tag.21.name": "iOS-specific"
 	},
 	{
-		"tag.22.description": "Designed specifically to work with Safari browser content blockers",
+		"tag.22.description": "Suunniteltu toimimaan erityisesti Safari-selaimen sisällönestojen kanssa",
 		"tag.22.name": "Safari-specific"
 	},
 	{
@@ -112,7 +112,7 @@
 		"tag.23.name": "Yhteensopivuus"
 	},
 	{
-		"tag.24.description": "Suodatin, joka tehostaa mainosten estoa erityisesti turkinkielisillä sivustoilla",
+		"tag.24.description": "Suodatin, joka tehostaa mainosestoa erityisesti turkinkielisillä sivustoilla",
 		"tag.24.name": "Turkinkielisten mainosten esto"
 	},
 	{
@@ -124,7 +124,7 @@
 		"tag.26.name": "Mobile Ads filter reference"
 	},
 	{
-		"tag.27.description": "Suodatin, joka tehostaa mainosten estoa erityisesti ranskankielisillä sivustoilla",
+		"tag.27.description": "Suodatin, joka tehostaa mainosestoa erityisesti ranskankielisillä sivustoilla",
 		"tag.27.name": "Ranskankielisten mainosten esto"
 	},
 	{
@@ -132,59 +132,59 @@
 		"tag.28.name": "Liste FR filter reference"
 	},
 	{
-		"tag.31.description": "Suodatin, joka tehostaa mainosten estoa erityisesti kiinankielisillä sivustoilla",
+		"tag.31.description": "Suodatin, joka tehostaa mainosestoa erityisesti kiinankielisillä sivustoilla",
 		"tag.31.name": "Kiinankielisten mainosten esto"
 	},
 	{
-		"tag.32.description": "Suodatin, joka tehostaa mainosten estoa erityisesti tšekinkielisillä sivustoilla",
+		"tag.32.description": "Suodatin, joka tehostaa mainosestoa erityisesti tšekinkielisillä sivustoilla",
 		"tag.32.name": "Tšekinkielisten mainosten esto"
 	},
 	{
-		"tag.33.description": "Suodatin, joka tehostaa mainosten estoa erityisesti slovakinkielisillä sivustoilla",
+		"tag.33.description": "Suodatin, joka tehostaa mainosestoa erityisesti slovakinkielisillä sivustoilla",
 		"tag.33.name": "Slovakinkielisten mainosten esto"
 	},
 	{
-		"tag.34.description": "Suodatin, joka tehostaa mainosten estoa erityisesti hepreankielisillä sivustoilla",
+		"tag.34.description": "Suodatin, joka tehostaa mainosestoa erityisesti hepreankielisillä sivustoilla",
 		"tag.34.name": "Hepreankielisten mainosten esto"
 	},
 	{
-		"tag.35.description": "Suodatin, joka tehostaa mainosten estoa erityisesti italiankielisillä sivustoilla",
+		"tag.35.description": "Suodatin, joka tehostaa mainosestoa erityisesti italiankielisillä sivustoilla",
 		"tag.35.name": "Italiankielisten mainosten esto"
 	},
 	{
-		"tag.36.description": "Suodatin, joka tehostaa mainosten estoa erityisesti latviankielisillä sivustoilla",
+		"tag.36.description": "Suodatin, joka tehostaa mainosestoa erityisesti latviankielisillä sivustoilla",
 		"tag.36.name": "Latviankielisten mainosten esto"
 	},
 	{
-		"tag.37.description": "Suodatin, joka tehostaa mainosten estoa erityisesti lieuttuankielisillä sivustoilla",
+		"tag.37.description": "Suodatin, joka tehostaa mainosestoa erityisesti lieuttuankielisillä sivustoilla",
 		"tag.37.name": "Liettuankielisten mainosten esto"
 	},
 	{
-		"tag.38.description": "Suodatin, joka tehostaa mainosten estoa erityisesti arabiankielisillä sivustoilla",
+		"tag.38.description": "Suodatin, joka tehostaa mainosestoa erityisesti arabiankielisillä sivustoilla",
 		"tag.38.name": "Arabiankielisten mainosten esto"
 	},
 	{
-		"tag.39.description": "Suodatin, joka tehostaa mainosten estoa erityisesti romaniankielisillä sivustoilla",
+		"tag.39.description": "Suodatin, joka tehostaa mainosestoa erityisesti romaniankielisillä sivustoilla",
 		"tag.39.name": "Romaniankielisten mainosten esto"
 	},
 	{
-		"tag.40.description": "Suodatin, joka tehostaa mainosten estoa erityisesti suomenkielisillä sivustoilla",
+		"tag.40.description": "Suodatin, joka tehostaa mainosestoa erityisesti suomenkielisillä sivustoilla",
 		"tag.40.name": "Suomenkielisten mainosten esto"
 	},
 	{
-		"tag.41.description": "Suodatin, joka tehostaa mainosten estoa erityisesti puolankielisillä sivustoilla",
+		"tag.41.description": "Suodatin, joka tehostaa mainosestoa erityisesti puolankielisillä sivustoilla",
 		"tag.41.name": "Puolankielisten mainosten esto"
 	},
 	{
-		"tag.42.description": "Suodatin, joka tehostaa mainosten estoa erityisesti islanninkielisillä sivustoilla",
+		"tag.42.description": "Suodatin, joka tehostaa mainosestoa erityisesti islanninkielisillä sivustoilla",
 		"tag.42.name": "Islanninkielisten mainosten esto"
 	},
 	{
-		"tag.43.description": "Suodatin, joka tehostaa mainosten estoa erityisesti norjankielisillä sivustoilla",
+		"tag.43.description": "Suodatin, joka tehostaa mainosestoa erityisesti norjankielisillä sivustoilla",
 		"tag.43.name": "Norjankielisten mainosten esto"
 	},
 	{
-		"tag.44.description": "Suodatin, joka tehostaa mainosten estoa erityisesti kreikankielisillä sivustoilla",
+		"tag.44.description": "Suodatin, joka tehostaa mainosestoa erityisesti kreikankielisillä sivustoilla",
 		"tag.44.name": "Kreikankielisten mainosten esto"
 	},
 	{
@@ -196,19 +196,19 @@
 		"tag.46.name": "Obsolete"
 	},
 	{
-		"tag.47.description": "Suodatin, joka tehostaa mainosten estoa erityisesti tšekinkielisillä sivustoilla",
+		"tag.47.description": "Suodatin, joka tehostaa mainosestoa erityisesti tšekinkielisillä sivustoilla",
 		"tag.47.name": "Tšekinkielisten mainosten esto"
 	},
 	{
-		"tag.48.description": "Suodatin, joka tehostaa mainosten estoa erityisesti unkarinkielisillä sivustoilla",
+		"tag.48.description": "Suodatin, joka tehostaa mainosestoa erityisesti unkarinkielisillä sivustoilla",
 		"tag.48.name": "Unkarinkielisten mainosten esto"
 	},
 	{
-		"tag.49.description": "Suodatin, joka tehostaa mainosten estoa erityisesti tanskankielisillä sivustoilla",
+		"tag.49.description": "Suodatin, joka tehostaa mainosestoa erityisesti tanskankielisillä sivustoilla",
 		"tag.49.name": "Tanskankielisten mainosten esto"
 	},
 	{
-		"tag.50.description": "Designed to resist adblock circumvention scripts on websites",
+		"tag.50.description": "Suunniteltu vastustamaan mainoseston kierto-ohjelmointeja verkkosivustoilla",
 		"tag.50.name": "Suojaus mainoseston kierto-ohjelmoinneilta"
 	},
 	{
@@ -216,23 +216,23 @@
 		"tag.51.name": "Cookie alerts blocking"
 	},
 	{
-		"tag.52.description": "Suodatin, joka tehostaa mainosten estoa erityisesti vietnaminkielisillä sivustoilla",
+		"tag.52.description": "Suodatin, joka tehostaa mainosestoa erityisesti vietnaminkielisillä sivustoilla",
 		"tag.52.name": "Vietnaminkielisten mainosten esto"
 	},
 	{
-		"tag.53.description": "Suodatin, joka tehostaa mainosten estoa erityisesti vironkielisillä sivustoilla",
+		"tag.53.description": "Suodatin, joka tehostaa mainosestoa erityisesti vironkielisillä sivustoilla",
 		"tag.53.name": "Vironkielisten mainosten esto"
 	},
 	{
-		"tag.54.description": "Suodatin, joka tehostaa mainosten estoa erityisesti farsinkielisillä sivustoilla",
+		"tag.54.description": "Suodatin, joka tehostaa mainosestoa erityisesti farsinkielisillä sivustoilla",
 		"tag.54.name": "Farsinkielisten mainosten esto"
 	},
 	{
-		"tag.55.description": "Suodatin, joka tehostaa mainosten estoa erityisesti ruotsinkielisillä sivustoilla",
+		"tag.55.description": "Suodatin, joka tehostaa mainosestoa erityisesti ruotsinkielisillä sivustoilla",
 		"tag.55.name": "Ruotsinkielisten mainosten esto"
 	},
 	{
-		"tag.56.description": "Suodatin, joka tehostaa mainosten estoa erityisesti koreankielisillä sivustoilla",
+		"tag.56.description": "Suodatin, joka tehostaa mainosestoa erityisesti koreankielisillä sivustoilla",
 		"tag.56.name": "Koreankielisten mainosten esto"
 	},
 	{
