--- a/locales/nl/filters.json
+++ b/locales/nl/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Deze lijst omvat websites voor Noorwegen, Denemarken, Ijsland, Deense gebieden en de Sami inheemse bevolking."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Deze lijst is gemaakt in de stijl van de ergernissenlijsten van AdGuard en Fanboy. Het combineert veel van Dandelion Sprout's meest trotse en meest onderhouden internationale lijsten, als een samengestelde compilatie omwille van de eenvoud."
+	},
+	{
+		"filter.251.name": "Legitieme URL-verkorter",
+		"filter.251.description": "Verwijdert automatisch onnodige '$'- en '&'-waarden van URL's, waardoor ze gemakkelijker van de URL-balk kunnen worden gekopieerd en elders als koppeling kunnen worden geplakt."
 	}
 ]
