--- a/locales/pl/filters.json
+++ b/locales/pl/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Ta lista obejmuje strony internetowe dotyczące Norwegii, Danii, Islandii, terytoriów duńskich i rdzennej ludności Lapończyków."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Ta lista jest sporządzona w stylu listy irytujących elementów AdGuard i Fanboy's annoyances. Łączy w sobie wiele z najbardziej dumnych i najczęściej utrzymywanych międzynarodowych list Dandelion Sprout, jako wyselekcjonowana kompilacja dla uproszczenia."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Automatycznie usuwa niepotrzebne wartości „$” i „&” z adresów URL, ułatwiając ich kopiowanie z paska adresu URL i wklejanie w innym miejscu jako linki."
 	}
 ]
