--- a/locales/sk/filters.json
+++ b/locales/sk/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Tento zoznam zahŕňa webové stránky pre Nórsko, Dánsko, Island, dánske územia a domorodé obyvateľstvo Sámov."
+	},
+	{
+		"filter.250.name": "Zoznam obťažujúcich stránok Dandelion Sprout",
+		"filter.250.description": "Tento zoznam je vytvorený v štýle adGuard a Fanboy zoznamov obťažujúcich stránok. Spája mnohé z najlepších a najčastejšie udržiavaných medzinárodných zoznamov Dandelion Sprout ako kurátorská kompilácia pre jednoduchosť."
+	},
+	{
+		"filter.251.name": "Legitímne skracovače URL adries",
+		"filter.251.description": "Automaticky odstraňuje nepotrebné hodnoty '$' a '&' z URL adries, čím uľahčuje ich kopírovanie z panela URL adries a ich prilepenie inam ako odkazy."
 	}
 ]
