--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Цей список працює на вебсайтах для Норвегії, Данії, Ісландії та для корінного населення саамі."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Цей фільтр створено в стилі фільтів подразників від AdGuard та разробника фільтрів Fanboy. Він поєднує багато фільтрів від розробника Dandelion Sprout, а саме фільтри, якими він пишається та підтримкою яких постійно займається. Створено задля простоти їх використання."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Автоматично видаляє зайві параметри «$» та «&» з URL-адрес, у такий спосіб роблячи їх простішими для копіювання та поширення."
 	}
 ]
