--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters (Skandinavien)",
 		"filter.249.description": "Diese Filterliste umfasst Websites für Norwegen, Dänemark, Island, dänische Gebiete und die samische Urbevölkerung."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Diese Liste ist im Stil der AdGuard- und Fanboy-Belästigungslisten gehalten. Sie fasst viele der bekanntesten und am häufigsten gepflegten internationalen Listen von Dandelion Sprout zusammen und ist der Einfachheit halber eine kuratierte Zusammenstellung."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Entfernt automatisch unnötige Werte wie „$” und „&” aus Webadressen, so dass diese leichter aus der Adressleiste kopiert und an anderer Stelle als Links eingefügt werden können."
 	}
 ]
