--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -53,7 +53,7 @@
 	},
 	{
 		"filter.14.name": "AdGuardin mielipahojen suodatin",
-		"filter.14.description": "Estää sivustojen ärsyttäviä elementtejä, kuten eväste-ilmoituksia, kolmannen osapuolen vimpaimia ja sivunsisäisiä ponnahduksia."
+		"filter.14.description": "Estää sivuilta ärsyttäviä elementtejä, kuten evästeilmoituksia, kolmansien osapuolten vimpaimia ja sivunsisäisiä ponnahduksia."
 	},
 	{
 		"filter.15.name": "AdGuardin DNS-suodatin",
@@ -225,7 +225,7 @@
 	},
 	{
 		"filter.221.name": "Polish Social Filters",
-		"filter.221.description": "Puolankielen suodatinlista sosiaalisille vimpaimille, ponnahduksille, jne."
+		"filter.221.description": "Puolankielen suodatinlista sosiaalisille vimpaimille, ponnahduksille, yms."
 	},
 	{
 		"filter.222.name": "Adblock-Persian list",
