--- a/locales/fr/filters.json
+++ b/locales/fr/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Filtres nordiques de Dandelion Sprout",
 		"filter.249.description": "Cette liste couvre les sites Web de la Norvège, du Danemark, de l'Islande, des territoires danois et de la population autochtone Sami."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "Cette liste est conçue dans le style de la liste d’AdGuard et de la liste Fanboy Annoyances. Elle combine plusieurs des listes internationales les plus fières et les plus fréquemment entretenues par Dandelion Sprout, en tant que compilation organisée par souci de simplicité."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "Supprime automatiquement les valeurs « $ » et « & » inutiles des URL, ce qui les rend plus faciles à copier à partir de la barre d’adresse et à coller ailleurs en tant que liens."
 	}
 ]
