--- a/locales/ja/filters.json
+++ b/locales/ja/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "このリストは、ノルウェー、デンマーク、アイスランド、デンマーク領、サーミの先住民族のウェブサイトをカバーしています。"
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "このリストは、AdGuardやFanboy's annoyancesリストのスタイルで作られています。このリストは、Dandelion Sproutが誇る、最も頻繁に維持されている国際的なリストの多くを、単純化のために厳選してまとめたものです。"
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener（URL短縮）",
+		"filter.251.description": "URLから不要な「$」や「&」の値を自動的に削除し、URLバーからコピーして他の場所にリンクとして貼り付けやすくします。"
 	}
 ]
