--- a/locales/ko/filters.json
+++ b/locales/ko/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout의 노르딕 필터",
 		"filter.249.description": "이 목록은 노르웨이, 덴마크, 아이슬란드, 덴마크 영토 및 사미 원주민 인구를위한 웹사이트를 다룹니다."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "이 목록은 AdGuard 및 Fanboy's Annoyances list 스타일로 만들어졌습니다. Dandelion Sprout의 많은 특장점과 빈번하게 유지보수되는 국제적인 차단 목록들을 포함하며 간단함을 목적으로 엄선된 필터 모음집입니다."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "자동으로 URL에서 불필요한 '$'나 '&'를 제거합니다. URL 바에서 복사하고 다른 어딘가에 링크 형태로 붙여넣기 쉽도록 해 줍니다."
 	}
 ]
