--- a/locales/en/filters.json
+++ b/locales/en/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filter that protects against various types of scams, such as mass text messaging, fake online stores, etc."
+		"filter.232.description": "A shorter version: Filter that protects against various types of scams in the Polish network, such as mass text messaging, fake online stores, etc."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
