--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -253,7 +253,7 @@
 	},
 	{
 		"filter.229.name": "I don't care about cookies",
-		"filter.229.description": "Piilottaa ärsyttäviä evästeilmoituksia melkein kaikilla sivustoilla ja säästää sinua turhilta klikkauksilta."
+		"filter.229.description": "Piilottaa ärsyttäviä evästeilmoituksia melkein kaikilla sivustoilla ja säästää sinua turhilta painalluksilta."
 	},
 	{
 		"filter.230.name": "Fanboy's Spanish/Portuguese",
@@ -301,7 +301,7 @@
 	},
 	{
 		"filter.241.name": "EasyList Cookie List",
-		"filter.241.description": "Poistaa eväste- ja yksityisyysvaroitukset. Sisältyy jo Fanboy's Annoyances -listaan."
+		"filter.241.description": "Poistaa eväste- ja tietosuojavaroitukset. Sisältyy jo Fanboy's Annoyances -listaan."
 	},
 	{
 		"filter.242.name": "NoCoin Filter List",
