--- a/locales/fi/groups.json
+++ b/locales/fi/groups.json
@@ -6,7 +6,7 @@
 		"group.5.name": "Turvallisuus"
 	},
 	{
-		"group.6.name": "Muu"
+		"group.6.name": "Muut"
 	},
 	{
 		"group.7.name": "Kielikohtaiset"
@@ -15,9 +15,9 @@
 		"group.1.name": "Mainosten estäminen"
 	},
 	{
-		"group.2.name": "Yksityisyys"
+		"group.2.name": "Tietosuoja"
 	},
 	{
-		"group.3.name": "Sosiaaliset pienoisohjelmat"
+		"group.3.name": "Sosiaaliset vimpaimet"
 	}
 ]
