--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "רשימה זו מכסה אתרים עבור נורווגיה, דנמרק, איסלנד, טריטוריות דניות, ואוכלוסיית הילידים הסאמים."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "רשימה זאת נעשתה בסגנון של רשימות AdGuard ושל Fanboy's Annoyances. היא משלבת הרבה מהרשימות הבין־לאומיות הגאות ביותר והמתוחזקות באופן תדיר, כאוסף תפור עבור טובת פשטות."
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "מסיר באופן אוטומטי ערכים של '$' וכן '&' ממענים, הופך אותם לקלים יותר להעתקה משורת הכתובת ולהדבקה בכל מקום אחר כקישורים."
 	}
 ]
