--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -297,7 +297,7 @@
 	},
 	{
 		"filter.240.name": "BarbBlock",
-		"filter.240.description": "BarbBlock je seznam za blokiranje vsebine s samostojnimi razširitvami brskalnika za Chrome in Firefox. Spletne strani, ki so uporabila odstranitve z zakonom DMCA, uvrščajo na sezname nedovoljenih. Takšno odstranjevanje je kategorično neveljavno, lahko pa učinkovito zastraši skladnost majhnih odprtokodnih projektov."
+		"filter.240.description": "BarbBlock je seznam za zaviranje vsebine s samostojnimi razširitvami brskalnika za Chrome in Firefox. Spletne strani, ki so uporabila odstranitve z zakonom DMCA, uvrščajo na sezname nedovoljenih. Takšno odstranjevanje je kategorično neveljavno, lahko pa učinkovito zastraši skladnost majhnih odprtokodnih projektov."
 	},
 	{
 		"filter.241.name": "Seznam piškotkov EasyList",
