--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -9,7 +9,7 @@
 	},
 	{
 		"filter.3.name": "AdGuard İzleme Koruması filtresi",
-		"filter.3.description": "Çeşitli çevrimiçi sayaçların ve web analitik araçlarının en kapsamlı listesi. İnternet üzerindeki hareketlerinizin izlenmesini istemiyorsanız bu filtreyi kullanın."
+		"filter.3.description": "Çeşitli çevrimiçi sayaçların ve web analitik araçlarının en kapsamlı listesi. İnternetteki eylemlerinizin izlenmesini istemiyorsanız bu filtreyi kullanın."
 	},
 	{
 		"filter.4.name": "AdGuard Sosyal Medya filtresi",
@@ -93,11 +93,11 @@
 	},
 	{
 		"filter.106.name": "EasyList Dutch",
-		"filter.106.description": "EasyList için Flemenkçe takviyesi. Zaten AdGuard Flemenkçe filtresine dahil edildi."
+		"filter.106.description": "EasyList için Flemenkçe takviyesi. AdGuard Flemenkçe filtresine zaten dahildir."
 	},
 	{
 		"filter.107.name": "EasyList Germany",
-		"filter.107.description": "EasyList için Almanca takviyesi. Zaten AdGuard Almanca filtresine dahil edildi."
+		"filter.107.description": "EasyList için Almanca takviyesi. AdGuard Almanca filtresine zaten dahildir."
 	},
 	{
 		"filter.108.name": "EasyList Hebrew",
@@ -121,7 +121,7 @@
 	},
 	{
 		"filter.113.name": "Liste FR",
-		"filter.113.description": "EasyList için Fransızca takviyesi. Zaten AdGuard Almanca filtresine dahil edildi."
+		"filter.113.description": "EasyList için Fransızca takviyesi. AdGuard Almanca filtresine zaten dahildir."
 	},
 	{
 		"filter.114.name": "ROList",
@@ -153,7 +153,7 @@
 	},
 	{
 		"filter.123.name": "Fanboy's Social Blocking List",
-		"filter.123.description": "Sosyal içeriği, sosyal araçları, sosyal betiklerini, sosyal simgeleri gizler ve engeller. Zaten Fanboy's Annoyances listesine dahil edildi."
+		"filter.123.description": "Sosyal içeriği, sosyal araçları, sosyal betiklerini, sosyal simgeleri gizler ve engeller. Fanboy's Annoyances listesine zaten dahildir."
 	},
 	{
 		"filter.201.name": "Web Annoyances Ultralist",
@@ -301,7 +301,7 @@
 	},
 	{
 		"filter.241.name": "EasyList Cookie List",
-		"filter.241.description": "Çerez ve gizlilik uyarılarını kaldırır. Zaten Fanboy's Annoyances listesine dahil edildi."
+		"filter.241.description": "Çerez ve gizlilik uyarılarını kaldırır. Fanboy's Annoyances listesine zaten dahildir."
 	},
 	{
 		"filter.242.name": "NoCoin Filter List",
