--- a/locales/tr/tags.json
+++ b/locales/tr/tags.json
@@ -48,11 +48,11 @@
 		"tag.1.name": "Reklam Engelleme"
 	},
 	{
-		"tag.4.description": "Sizi, zararlı ve tehlikeli sitelerden korumak için tasarlandı",
+		"tag.4.description": "Sizi kötü amaçlı ve tehlikeli sitelerden korumak için tasarlandı",
 		"tag.4.name": "Kötü amaçlı yazılım ve dolandırıcılığa karşı koruma"
 	},
 	{
-		"tag.10.description": "AdGuard reklam engelleyicisi ile kullanılması önerilir",
+		"tag.10.description": "AdGuard reklam engelleyici ile kullanılması önerilir",
 		"tag.10.name": "AdGuard'ın tavsiyesi"
 	},
 	{
@@ -92,7 +92,7 @@
 		"tag.18.name": "Portekizce diline özgü reklam engelleme"
 	},
 	{
-		"tag.19.description": "Mobil cihazlarda reklamları ve takipçileri engellemek için özel olarak tasarlandı",
+		"tag.19.description": "Mobil cihazlarda reklamları ve izleyicileri engellemek için özel olarak tasarlandı",
 		"tag.19.name": "Mobil cihazlar için"
 	},
 	{
