--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -53,7 +53,7 @@
 	},
 	{
 		"filter.14.name": "Фільтр подразників AdGuard",
-		"filter.14.description": "Блокує надокучливі елементи на вебсторінках, включаючи сповіщення про куки, сторонні віджети та виринаючі вікна на сторінці."
+		"filter.14.description": "Блокує надокучливі елементи на вебсторінках, зокрема сповіщення про куки, сторонні віджети та спливні вікна на сторінці."
 	},
 	{
 		"filter.15.name": "DNS-фільтр AdGuard",
@@ -73,7 +73,7 @@
 	},
 	{
 		"filter.101.name": "EasyList",
-		"filter.101.description": "EasyList — це основний список блокування, який вилучає рекламу з вебсторінок англійською мовою. Він вже включений до основного фільтра AdGuard."
+		"filter.101.description": "EasyList — це основний список блокування, який вилучає рекламу з вебсторінок англійською мовою. Уже входить до складу Основного фільтра AdGuard."
 	},
 	{
 		"filter.102.name": "ABPindo",
@@ -93,11 +93,11 @@
 	},
 	{
 		"filter.106.name": "EasyList Голландський",
-		"filter.106.description": "Голландське доповнення для EasyList. Вже включено до голландського фільтра AdGuard."
+		"filter.106.description": "Голландське доповнення для EasyList. Уже входить до складу Голландського фільтра AdGuard."
 	},
 	{
 		"filter.107.name": "EasyList Німецький",
-		"filter.107.description": "Німецьке доповнення для EasyList. Вже включено до Німецького фільтра AdGuard."
+		"filter.107.description": "Німецьке доповнення для EasyList. Уже входить до складу Німецького фільтра AdGuard."
 	},
 	{
 		"filter.108.name": "EasyList Іврит",
@@ -121,7 +121,7 @@
 	},
 	{
 		"filter.113.name": "Liste FR",
-		"filter.113.description": "Французьке доповнення для EasyList. Вже включено до Французького фільтра AdGuard."
+		"filter.113.description": "Французьке доповнення для EasyList. Уже входить до складу Французького фільтра AdGuard."
 	},
 	{
 		"filter.114.name": "ROList",
@@ -149,11 +149,11 @@
 	},
 	{
 		"filter.122.name": "Fanboy's Annoyances",
-		"filter.122.description": "Вилучає спливні банери та інші надокучливі елементи на сторінці. Включає фільтр блокування соціальних мереж Fanboy's Social Blocking та фільтр блокування куків EasyList Cookie."
+		"filter.122.description": "Вилучає спливні банери та інші надокучливі елементи на сторінці. Містить фільтри Fanboy's Social Blocking та EasyList Cookie List."
 	},
 	{
 		"filter.123.name": "Fanboy's Social Blocking List",
-		"filter.123.description": "Приховує та блокує вміст, віджети, скрипти й піктограми соціальних мереж. Вже включено в список Fanboy's Annoyances."
+		"filter.123.description": "Приховує та блокує вміст, віджети, скрипти й піктограми соціальних мереж. Уже входить до складу фільтра Fanboy's Annoyances."
 	},
 	{
 		"filter.201.name": "Web Annoyances Ultralist",
@@ -217,7 +217,7 @@
 	},
 	{
 		"filter.219.name": "ChinaList+EasyList",
-		"filter.219.description": "Список блокування реклами для Китаю. Зауважте, що до нього насправді не включені фільтри EasyList."
+		"filter.219.description": "Фільтр блокування реклами для Китаю. Зауважте, що до його складу не входять фільтри EasyList."
 	},
 	{
 		"filter.220.name": "CJX's Annoyances List",
@@ -301,11 +301,11 @@
 	},
 	{
 		"filter.241.name": "EasyList Cookie List",
-		"filter.241.description": "Вилучає попередження про куки та приватність. Вже включений до Fanboy's Annoyances list."
+		"filter.241.description": "Вилучає попередження про куки та приватність. Уже входить до складу фільтра Fanboy's Annoyances."
 	},
 	{
 		"filter.242.name": "NoCoin Filter List",
-		"filter.242.description": "Цей фільтр деактивує браузерні майнери криптовалют, такі як coin-hive."
+		"filter.242.description": "Цей фільтр вимикає браузерні майнери криптовалют, такі як coin-hive."
 	},
 	{
 		"filter.243.name": "Frellwit's Swedish Filter",
