--- a/locales/zh_TW/filters.json
+++ b/locales/zh_TW/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "此清單涵蓋有關挪威、丹麥、冰島、丹麥領土和薩米原住民的網站。"
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's Annoyances List",
+		"filter.250.description": "此清單是以 AdGuard 和 Fanboy 的惱人的事物清單之樣式被製作。它結合許多 Dandelion Sprout 最自豪和最常被維護的國際清單，作為由於簡單目的之精選彙編。"
+	},
+	{
+		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.description": "從網址中自動地移除不必要的'$'和'&'值，使它們更容易從網址列中被複製並作為連結在別處被貼上。"
 	}
 ]
