--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -8,7 +8,7 @@
 		"filter.2.description": "EasyList + AdGuard Basisfilter. Dieser Filter ist für die Verbesserung zum Sperren von Werbung erforderlich."
 	},
 	{
-		"filter.3.name": "AdGuard — Tracking-Schutzfilter",
+		"filter.3.name": "AdGuard Tracking-Schutzfilter",
 		"filter.3.description": "Die umfangreichste Liste von verschiedenen Online-Zähler und Web-Analytics-Tools. Wenn Sie nicht möchten, dass Ihre Aktionen im Internet verfolgt werden, aktivieren Sie diesen Filter."
 	},
 	{
@@ -57,7 +57,7 @@
 	},
 	{
 		"filter.15.name": "AdGuard — DNS-Filter",
-		"filter.15.description": "Filter, der sich aus mehreren anderen Filtern zusammensetzt (AdGuard Base-Filter, Social Media-Filter, Tracking Schutz-Filter, Filter für mobile Werbung, EasyList und EasyPrivacy) und speziell vereinfacht wurde, um besser für das Sperren von Werbung auf DNS-Ebene kompatibel zu sein."
+		"filter.15.description": "Filter, der sich aus mehreren anderen Filtern zusammensetzt (AdGuard Base-Filter, Social Media-Filter, Tracking-Schutzfilter, Filter für mobile Werbung, EasyList und EasyPrivacy) und speziell vereinfacht wurde, um besser für das Sperren von Werbung auf DNS-Ebene kompatibel zu sein."
 	},
 	{
 		"filter.16.name": "AdGuard — Französischer Filter",
@@ -336,7 +336,7 @@
 		"filter.250.description": "Diese Liste ist im Stil der AdGuard- und Fanboy-Belästigungslisten gehalten. Sie fasst viele der bekanntesten und am häufigsten gepflegten internationalen Listen von Dandelion Sprout zusammen und ist der Einfachheit halber eine kuratierte Zusammenstellung."
 	},
 	{
-		"filter.251.name": "Legitimate URL Shortener",
+		"filter.251.name": "URL-Kürzungsdienst von Legitimate",
 		"filter.251.description": "Entfernt automatisch unnötige Werte wie „$” und „&” aus Webadressen, so dass diese leichter aus der Adressleiste kopiert und an anderer Stelle als Links eingefügt werden können."
 	}
 ]
