--- a/locales/sk/filters.json
+++ b/locales/sk/filters.json
@@ -17,7 +17,7 @@
 	},
 	{
 		"filter.5.name": "AdGuard experimentálny filter",
-		"filter.5.description": "Filter navrhnutý na testovanie určitých riskantných filtračných pravidiel predtým, ako sú tieto pridaný do základných filtrov."
+		"filter.5.description": "Filter navrhnutý na testovanie určitých riskantných filtračných pravidiel predtým, ako sú tieto pridané do základných filtrov."
 	},
 	{
 		"filter.6.name": "AdGuard nemecký filter",
@@ -245,7 +245,7 @@
 	},
 	{
 		"filter.227.name": "List-KR",
-		"filter.227.description": "Filter, ktorý odstraňuje reklamy, sledovače a rôzne skripty z webov s kórejským obsahom. Na základe zoznamu Corset, kórejského filtra Adblock a Youslist. Kombinované a rozšírené o pravidlá špecifické pre AdGuard pre vylepšenú filtráciu. Očakáva sa, že sa tento filter použije spolu s filtrom AdGuard Base."
+		"filter.227.description": "Filter, ktorý odstraňuje reklamy a rôzne skripty z webových stránok s kórejským obsahom. Na základe Corset, kórejského filtra Adblock, Youslist. Kombinované a rozšírené o pravidlá špecifické pre AdGuard pre vylepšené filtrovanie. Očakáva sa, že tento filter sa bude používať spolu s filtrom AdGuard Base."
 	},
 	{
 		"filter.228.name": "xinggsf",
